# moonai

./: .clang-format  .gitattributes  .gitignore  .prettierignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  README.md  ROADMAP.md  config.lua  flake.nix  justfile  package.json  plan-ecs-migration.md  plan-optimization.md  plan-profiler.lua  plan-profiler.md  plan.md  profiler.lua  pyproject.toml  vcpkg.json  zensical.toml
.github/: BRANCH_PROTECTION.md  pull_request_template.md
analysis/: __main__.py  analyze_genome.py  compare_experiments.py  genome.py  html_report.py  io.py  labels.py  pipeline.py  plot_complexity.py  plot_fitness.py  plot_population.py  plot_species.py  plots.py  pyproject.toml  report.py  run_experiments.py  setup_experiments.py  summary.py  utils.py  validate_config.py
analysis/moonai_analysis/: __main__.py  genome.py  html_report.py  io.py  pipeline.py  plots.py  summary.py
analysis/moonai_analysis/templates/: report.html.j2
config/: default_config.json  settings.json
docs/: about.md  index.md  installation.md  usage.md
legacy/: .clang-format  .clang-tidy  CMakeLists.txt  justfile-cpp  vcpkg.json
legacy/app/: CMakeLists.txt
legacy/core/: CMakeLists.txt  app_state.cpp  app_state.hpp  config.cpp  config.hpp  deterministic_respawn.hpp  random.hpp
legacy/evolution/: crossover.hpp  evolution_manager.cpp  genome.hpp  network_cache.hpp  neural_network.cpp  neural_network.hpp
legacy/simulation/: CMakeLists.txt  batch.cu  buffers.hpp  simulation.cpp
legacy/visualization/: constants.hpp  overlay.cpp  overlay.hpp  renderer.hpp
profiler/: __init__.py  __main__.py  html_report.py  pyproject.toml  report.py
profiler/moonai_profiler/: __main__.py  html_report.py  io.py  pipeline.py  plots.py  report.py
profiler/moonai_profiler/templates/: report.html.j2
profiler/templates/: report.html
rust/: Cargo.toml
rust/moonai-app/: Cargo.toml
rust/moonai-app/src/: app.rs  lib.rs  main.rs  profiler_main.rs
rust/moonai-app/tests/: integration_tests.rs
rust/moonai-core/: Cargo.toml
rust/moonai-core/src/: config.rs  lib.rs  lua.rs  metrics.rs  profiler_macros.rs  random.rs  types.rs
rust/moonai-evo/: Cargo.toml
rust/moonai-evo/src/: cache.rs  crossover.rs  evolution.rs  genome.rs  lib.rs  mutation.rs  network.rs  species.rs
rust/moonai-ffi/: CMakeLists.txt  Cargo.toml  build.rs
rust/moonai-ffi/examples/: compare.rs
rust/moonai-ffi/include/: gpu_sim.hpp  random.hpp  sim_context.hpp  simulation.hpp
rust/moonai-ffi/src/: ffi.rs  lib.rs
rust/moonai-ffi/src_cpp/: gpu_sim.cpp  random.cpp  sim_context.cpp  simulation.cpp
rust/moonai-ffi/tests/: rng_test.rs
rust/moonai-ffi/tests_cpp/: ref_mt19937_64  ref_mt19937_64.cpp  rng_baseline  rng_baseline.cpp  simple_test  simple_test.cpp  test_cpp_random  test_cpp_random.cpp  test_seed  test_seed.cpp  test_seedseq  test_seedseq.cpp  test_seedseq_detail  test_seedseq_detail.cpp
rust/moonai-metrics/: Cargo.toml
rust/moonai-metrics/src/: lib.rs  logger.rs  metrics.rs
rust/moonai-state/: Cargo.toml
rust/moonai-state/src/: agent.rs  food.rs  lib.rs  respawn.rs  state.rs
src/: app.cpp  app.hpp  main.cpp  profiler_main.cpp
src/app/: CMakeLists.txt  app.cpp  app.hpp
src/core/: CMakeLists.txt  app_state.cpp  app_state.hpp  config.cpp  config.hpp  deterministic_respawn.hpp  logger.cpp  logger.hpp  lua_runtime.cpp  lua_runtime.hpp  metrics.cpp  metrics.hpp  profiler.cpp  profiler.hpp  profiler_macros.hpp  profiler_suite.cpp  profiler_suite.hpp  random.cpp  random.hpp  types.hpp
src/data/: CMakeLists.txt  logger.cpp  logger.hpp  metrics.cpp  metrics.hpp
src/evolution/: CMakeLists.txt  crossover.cpp  crossover.hpp  evolution_manager.cpp  evolution_manager.hpp  evolution_manager_actions.cpp  evolution_manager_gpu.cpp  evolution_manager_population.cpp  genome.cpp  genome.hpp  inference_cache.cu  inference_cache.hpp  mutation.cpp  mutation.hpp  network_cache.cpp  network_cache.hpp  neural_network.cpp  neural_network.hpp  species.cpp  species.hpp
src/evolution/backends/cuda/: gpu_network_cache.cu  gpu_network_cache.hpp
src/gpu/: CMakeLists.txt  cuda_utils.cuh  ecs_gpu_packing.cu  fitness_eval.cu  gpu_batch.cu  gpu_batch.hpp  gpu_batch_ecs.cu  gpu_batch_ecs.hpp  gpu_data_buffer.cu  gpu_data_buffer.hpp  gpu_entity_mapping.cpp  gpu_entity_mapping.hpp  gpu_network_cache.cu  gpu_network_cache.hpp  gpu_simulation.cu  gpu_types.hpp  neural_inference.cu  sensor_common.cuh  sensor_kernel.cu
src/metrics/: CMakeLists.txt  logger.cpp  metrics.cpp  metrics.hpp
src/simulation/: CMakeLists.txt  agent.cpp  agent.hpp  batch.cu  batch.hpp  buffers.cu  checks.cuh  common.cpp  common.hpp  component.hpp  components.hpp  cpu.cpp  cpu.hpp  entity.hpp  environment.cpp  environment.hpp  food_store.cpp  food_store.hpp  gpu.cpp  gpu.hpp  layout.hpp  manager.cpp  manager.hpp  physics.cpp  physics.hpp  predator.cpp  predator.hpp  prey.cpp  prey.hpp  registry.cpp  registry.hpp  reproduction.cpp  reproduction.hpp  session.cpp  session.hpp  simulation.cpp  simulation.hpp  simulation_manager.cpp  simulation_manager.hpp  simulation_manager_cpu.cpp  (+17 more)
src/simulation/backends/cuda/: cuda_utils.cuh  gpu_batch.cu  gpu_batch.hpp  gpu_data_buffer.cu
src/simulation/systems/: combat.cpp  combat.hpp  energy.cpp  energy.hpp  food_respawn.cpp  movement.cpp  movement.hpp  sensor.cpp  sensor.hpp
src/visualization/: CMakeLists.txt  constants.hpp  frame_snapshot.cpp  frame_snapshot.hpp  overlay.cpp  overlay.hpp  renderer.cpp  renderer.hpp  system_font_resolver.cpp  system_font_resolver.hpp  ui_overlay.cpp  ui_overlay.hpp  visual_constants.hpp  visualization_manager.cpp  visualization_manager.hpp
tests/: CMakeLists.txt  test_config.cpp  test_ecs_entity.cpp  test_ecs_performance.cpp  test_ecs_registry.cpp  test_ecs_sparse_set.cpp  test_ecs_systems.cpp  test_evolution.cpp  test_food_store.cpp  test_genome.cpp  test_gpu.cpp  test_logger.cpp  test_neural_network.cpp  test_profiler.cpp  test_profiler_suite.cpp  test_random.cpp  test_simulation.cpp  test_simulation_sensors.cpp
web/: index.html  manifest.json  script.js  styles.css
(+55 files in other folders)
