[project]
name = "moonai-tools"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "pandas>=2.0",
    "matplotlib>=3.7",
    "networkx>=3.0",
    "jinja2>=3.1",
]

[project.scripts]
analysis = "analysis.__main__:main"
profiler = "profiler.__main__:main"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["analysis", "profiler"]