[project]
name = "moonai-analysis"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "matplotlib>=3.7",
    "networkx>=3.0",
]

[project.scripts]
moonai-analysis = "moonai_analysis.__main__:main"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"
