[workspace]
resolver = "2"
members = ["moonai-ffi", "moonai-core", "moonai-evo", "moonai-metrics"]

[workspace.package]
version = "0.1.0"
authors = ["MoonAI Team"]
edition = "2021"

[workspace.dependencies]
cxx = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"