[package]
name = "moonai-app"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "moonai_app"
path = "src/lib.rs"

[dependencies]
moonai-core = { path = "../moonai-core" }
moonai-evo = { path = "../moonai-evo" }
moonai-metrics = { path = "../moonai-metrics" }
moonai-state = { path = "../moonai-state" }
moonai-ffi = { path = "../moonai-ffi" }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"

[[bin]]
name = "moonai"
path = "src/main.rs"

[[bin]]
name = "moonai_profiler"
path = "src/profiler_main.rs"

[dev-dependencies]
similar = "2.6"