[package]
name = "moonai-metrics"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
moonai-core = { path = "../moonai-core" }
moonai-evo = { path = "../moonai-evo" }
serde = { workspace = true }
serde_json = { workspace = true }
csv = "1.3"
chrono = "0.4"

[dev-dependencies]
similar = "2.6"