[package]
name = "moonai-state"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
moonai-core = { path = "../moonai-core" }
moonai-evo = { path = "../moonai-evo" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
similar = "2.6"